# Mystique

./: Cargo.toml  README.md
archive/: internship.txt
src/: config.rs  decoder.rs  main.rs  service.rs  system.rs  upload.rs  webserver.rs
src/error/: mod.rs
src/handler/: default.rs  files.rs  mod.rs
src/utils/: file_system.rs  http.rs  mod.rs
