[package]
name = "mystique"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.7"
actix-web = {version = "0.7", default-features = false, features = ["brotli", "flate2-c"]} #Exclude session feature
askama = "0.7"
clap = "2.32"
futures = "0.1.0"
htmlescape = "0.3"
machine-ip = "0.2"
open = "*"
pretty-bytes = "0.2.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"