[package]
name = "mystique"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.7"
askama = "0.7"
clap = "2.32"
htmlescape = "0.3"
machine-ip = "0.2"
open = "*"
pretty-bytes = "0.2.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bson = "2.1.0"
actix-web = "1"
futures = "0.1"
rand = "0.6"